Bug 339392 - krdc main window columns are not resizable
Summary: krdc main window columns are not resizable
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.13.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Urs Wolfer
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2014-09-25 18:26 UTC by vakopian+kde
Modified: 2015-04-06 19:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description vakopian+kde 2014-09-25 18:26:13 UTC
The main window for krdc has several columns, like "Remote Desktop", "Last Connected", etc.
None of the columns are resizable.
Even though on startup it seems krdc tries to size the columns itself, the ability to resize columns should still be present

Reproducible: Always

Steps to Reproduce:
1. open krdc
2. if main window not open, click "New connection"
3. try to resize the "Remote Desktop" column

Actual Results:  
column cannot be resized

Expected Results:  
could should resize

this issue has been there for as long as I remember (many years and may versions of krdc).
Comment 1 vakopian+kde 2014-09-25 18:42:02 UTC
the reason why the current behaviour is really a bug and should be fixed (rather than an enhencement), is the following:
As pointed out in the description, on startup the columns are nicely sized. However, after connecting to and disconnecting an existing machine, and clicking "New connection", the "Remote desktop" column has a different size, that may not fit all the descriptions.
Comment 2 Urs Wolfer 2015-03-14 11:28:28 UTC
Git commit 350c266e7c5b8ab3d0788aafae8e45983876e56b by Urs Wolfer.
Committed on 14/03/2015 at 11:26.
Pushed by uwolfer into branch 'master'.

Fix resizing of columns in main window

- based on a patch by Luca Sartorelli <dj3mb3 gmail.com>
REVIEW: 122826

M  +0    -1    mainwindow.cpp

http://commits.kde.org/krdc/350c266e7c5b8ab3d0788aafae8e45983876e56b
Comment 3 Urs Wolfer 2015-04-06 19:52:51 UTC
Git commit 893f19d5e5830215e5301e99f677dc15ced9b977 by Urs Wolfer.
Committed on 06/04/2015 at 19:54.
Pushed by uwolfer into branch 'master'.

Fix size of columns in main window when sorting is applied

- follow-up fix for 350c266e7c5b8ab3d0788aafae8e45983876e56b
- thanks to Luca Sartorelli for noticing

M  +1    -1    mainwindow.cpp

http://commits.kde.org/krdc/893f19d5e5830215e5301e99f677dc15ced9b977