Fix resizing of columns in main window

- based on a patch by Luca Sartorelli <dj3mb3 gmail.com>

BUG: 339392
REVIEW: 122826